<resources>
    <string name="app_name">Exchange</string>
    <string name="main_lblQuantity">Quantity</string>
    <string name="main_et_hintQuantity">0.00</string>
    <string name="main_coinFrom">From Currency</string>
    <string name="main_rbTextEuro">Euro</string>
    <string name="main_rbTextDolar">Dollar</string>
    <string name="main_rbTextLibra">Pound</string>
    <string name="main_btnText">Exchange</string>
    <string name="main_coinTo">To Currency</string>
    <string name="main_voidText">0.00</string>
    <string name="main_textDollar">USD</string>
    <string name="main_textPound">GBP</string>
    <string name="main_textEuro">EUR</string>
</resources>
